test/conformance/kuttl/validate/clusterpolicy/standard/cel/cel-variables/03-resources.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: deployments-pass.yaml
  shouldFail: false
- file: deployments-fail.yaml
  shouldFail: true
